[gd_scene load_steps=27 format=2]

[ext_resource path="res://Scenes/Map.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Base.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Camera.gd" type="Script" id=3]
[ext_resource path="res://Scenes/ArtilhariaShoot.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Main_scene.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Artilharia_button.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Area.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Artilharia.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/tile_selection.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scripts/CheckButton.gd" type="Script" id=10]
[ext_resource path="res://Scripts/EnemySpawner.gd" type="Script" id=11]
[ext_resource path="res://Scripts/Wave.gd" type="Script" id=12]
[ext_resource path="res://Scripts/Random_wave.gd" type="Script" id=13]
[ext_resource path="res://Scripts/ButtonWave.gd" type="Script" id=14]
[ext_resource path="res://Models/bottun_pressed.png" type="Texture" id=15]
[ext_resource path="res://Models/bottun_hover.png" type="Texture" id=16]
[ext_resource path="res://Models/bottun_normal.png" type="Texture" id=17]
[ext_resource path="res://Models/PinkMoney.png" type="Texture" id=18]
[ext_resource path="res://Scripts/CameraUI.gd" type="Script" id=19]
[ext_resource path="res://Fonts/Upheveal/upheavtt.ttf" type="DynamicFontData" id=20]
[ext_resource path="res://Scripts/CameraUI2.gd" type="Script" id=21]

[sub_resource type="BoxShape" id=1]

[sub_resource type="NavigationMesh" id=2]
vertices = PoolVector3Array( -36.9015, 0.318096, 20.6985, -36.9015, 0.318096, 27.5985, -32.1015, 0.318096, 32.0985, -32.1015, 0.318096, 32.0985, -27.6015, 0.318096, 36.8985, -20.7015, 0.318096, 36.8985, 20.6985, 0.318096, 36.8985, 27.5985, 0.318096, 36.8985, 32.0985, 0.318096, 32.0985, 32.0985, 0.318096, 32.0985, 36.8985, 0.318096, 27.5985, 36.8985, 0.318096, 20.6985, 36.8985, 0.318096, -20.7015, 36.8985, 0.318096, -27.6015, 32.0985, 0.318096, -32.1015, 32.0985, 0.318096, -32.1015, 27.5985, 0.318096, -36.9015, 20.6985, 0.318096, -36.9015, -20.7015, 0.318096, -36.9015, -27.6015, 0.318096, -36.9015, -32.1015, 0.318096, -32.1015, -32.1015, 0.318096, -32.1015, -36.9015, 0.318096, -27.6015, -36.9015, 0.318096, -20.7015, -36.9015, 0.318096, 13.7985, -36.9015, 0.318096, 20.6985, -32.1015, 0.318096, 32.0985, -32.1015, 0.318096, 32.0985, -20.7015, 0.318096, 36.8985, -13.8015, 0.318096, 36.8985, 13.7985, 0.318096, 36.8985, 20.6985, 0.318096, 36.8985, 32.0985, 0.318096, 32.0985, 32.0985, 0.318096, 32.0985, 36.8985, 0.318096, 20.6985, 36.8985, 0.318096, 13.7985, 36.8985, 0.318096, -13.8015, 36.8985, 0.318096, -20.7015, 32.0985, 0.318096, -32.1015, 32.0985, 0.318096, -32.1015, 20.6985, 0.318096, -36.9015, 13.7985, 0.318096, -36.9015, -13.8015, 0.318096, -36.9015, -20.7015, 0.318096, -36.9015, -32.1015, 0.318096, -32.1015, -32.1015, 0.318096, -32.1015, -36.9015, 0.318096, -20.7015, -36.9015, 0.318096, -13.8015, -36.9015, 0.318096, 6.89848, -36.9015, 0.318096, 13.7985, -32.1015, 0.318096, 32.0985, -32.1015, 0.318096, 32.0985, -13.8015, 0.318096, 36.8985, -6.90152, 0.318096, 36.8985, 6.89848, 0.318096, 36.8985, 13.7985, 0.318096, 36.8985, 32.0985, 0.318096, 32.0985, 32.0985, 0.318096, 32.0985, 36.8985, 0.318096, 13.7985, 36.8985, 0.318096, 6.89848, 36.8985, 0.318096, -6.90152, 36.8985, 0.318096, -13.8015, 32.0985, 0.318096, -32.1015, 32.0985, 0.318096, -32.1015, 13.7985, 0.318096, -36.9015, 6.89848, 0.318096, -36.9015, -6.90152, 0.318096, -36.9015, -13.8015, 0.318096, -36.9015, -32.1015, 0.318096, -32.1015, -32.1015, 0.318096, -32.1015, -36.9015, 0.318096, -13.8015, -36.9015, 0.318096, -6.90152, -36.9015, 0.318096, -0.00151825, -36.9015, 0.318096, 6.89848, -32.1015, 0.318096, 32.0985, -32.1015, 0.318096, 32.0985, -6.90152, 0.318096, 36.8985, -0.00151825, 0.318096, 36.8985, -0.00151825, 0.318096, 36.8985, 6.89848, 0.318096, 36.8985, 32.0985, 0.318096, 32.0985, 32.0985, 0.318096, 32.0985, 36.8985, 0.318096, 6.89848, 36.8985, 0.318096, -0.00151825, -0.00151825, 0.318096, -36.9015, 36.8985, 0.318096, -0.00151825, 36.8985, 0.318096, -6.90152, 32.0985, 0.318096, -32.1015, 6.89848, 0.318096, -36.9015, -36.9015, 0.318096, -0.00151825, -0.00151825, 0.318096, -36.9015, -6.90152, 0.318096, -36.9015, -32.1015, 0.318096, -32.1015, -36.9015, 0.318096, -6.90152, 36.8985, 0.318096, -0.00151825, -0.00151825, 0.318096, -36.9015, -36.9015, 0.318096, -0.00151825, -32.1015, 0.318096, 32.0985, -0.00151825, 0.318096, 36.8985, 32.0985, 0.318096, 32.0985 )
polygons = [ PoolIntArray( 2, 1, 0 ), PoolIntArray( 5, 4, 3 ), PoolIntArray( 6, 8, 7 ), PoolIntArray( 11, 10, 9 ), PoolIntArray( 14, 13, 12 ), PoolIntArray( 17, 16, 15 ), PoolIntArray( 20, 19, 18 ), PoolIntArray( 23, 22, 21 ), PoolIntArray( 26, 25, 24 ), PoolIntArray( 29, 28, 27 ), PoolIntArray( 31, 30, 32 ), PoolIntArray( 34, 33, 35 ), PoolIntArray( 38, 37, 36 ), PoolIntArray( 41, 40, 39 ), PoolIntArray( 44, 43, 42 ), PoolIntArray( 47, 46, 45 ), PoolIntArray( 50, 49, 48 ), PoolIntArray( 53, 52, 51 ), PoolIntArray( 56, 55, 54 ), PoolIntArray( 59, 58, 57 ), PoolIntArray( 62, 61, 60 ), PoolIntArray( 63, 65, 64 ), PoolIntArray( 68, 67, 66 ), PoolIntArray( 71, 70, 69 ), PoolIntArray( 74, 73, 72 ), PoolIntArray( 77, 76, 75 ), PoolIntArray( 80, 79, 78 ), PoolIntArray( 83, 82, 81 ), PoolIntArray( 86, 85, 87 ), PoolIntArray( 87, 85, 88 ), PoolIntArray( 88, 85, 84 ), PoolIntArray( 93, 92, 89 ), PoolIntArray( 89, 92, 91 ), PoolIntArray( 89, 91, 90 ), PoolIntArray( 97, 96, 98 ), PoolIntArray( 98, 96, 99 ), PoolIntArray( 99, 96, 94 ), PoolIntArray( 94, 96, 95 ) ]

[sub_resource type="DynamicFont" id=3]
size = 18
font_data = ExtResource( 20 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://Fonts/Upheveal/upheavtt.ttf"

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = SubResource( 4 )

[node name="world" type="Spatial"]
script = ExtResource( 5 )

[node name="Base" parent="." groups=[
"Base",
] instance=ExtResource( 2 )]
transform = Transform( 2.5, 0, 0, 0, 2.5, 0, 0, 0, 2.5, 0, 0, 0 )

[node name="Navigation" type="Navigation" parent="."]

[node name="Map" parent="Navigation" instance=ExtResource( 1 )]
data = {
"cells": PoolIntArray( -65536, 0, 1, -65535, 0, 0, -65534, 0, 536870913, -65533, 0, 0, -65532, 0, 1, -65531, 0, 0, -65530, 0, 1, -65529, 0, 0, -65528, 0, 1, -65527, 0, 0, -65526, 0, 0, -65525, 0, 1, -65524, 0, 0, -65523, 0, 1, -65522, 0, 0, -15, 0, 1, -14, 0, 0, -13, 0, 1, -12, 0, 0, -11, 0, 1, -10, 0, 1, -9, 0, 0, -8, 0, 1, -7, 0, 0, -6, 0, 1, -5, 0, 0, -4, 0, 1, -3, 0, 0, -2, 0, 1, -1, 0, 536870912, -65536, 1, 0, -65535, 1, 1, -65534, 1, 1073741824, -65533, 1, 1, -65532, 1, 0, -65531, 1, 1073741825, -65530, 1, 0, -65529, 1, 1, -65528, 1, 0, -65527, 1, 1, -65526, 1, 1, -65525, 1, 0, -65524, 1, 1, -65523, 1, 0, -65522, 1, 1, -15, 1, 0, -14, 1, 1, -13, 1, 0, -12, 1, 536870913, -11, 1, 0, -10, 1, 0, -9, 1, 1, -8, 1, 0, -7, 1, 1, -6, 1, 0, -5, 1, 1, -4, 1, 0, -3, 1, 1073741825, -2, 1, 0, -1, 1, 1, -65536, 2, 1, -65535, 2, 0, -65534, 2, 1, -65533, 2, 0, -65532, 2, 1, -65531, 2, 0, -65530, 2, 1, -65529, 2, 0, -65528, 2, 1, -65527, 2, 0, -65526, 2, 0, -65525, 2, 1, -65524, 2, 0, -65523, 2, 1, -65522, 2, 0, -15, 2, 1, -14, 2, 0, -13, 2, 1, -12, 2, 0, -11, 2, 1, -10, 2, 1, -9, 2, 0, -8, 2, 1, -7, 2, 0, -6, 2, 1, -5, 2, 0, -4, 2, 1, -3, 2, 0, -2, 2, 1, -1, 2, 0, -65536, 3, 0, -65535, 3, 1, -65534, 3, 0, -65533, 3, 1, -65532, 3, 0, -65531, 3, 1, -65530, 3, 0, -65529, 3, 1, -65528, 3, 0, -65527, 3, 1, -65526, 3, 1, -65525, 3, 0, -65524, 3, 536870913, -65523, 3, 0, -65522, 3, 1, -15, 3, 0, -14, 3, 1, -13, 3, 0, -12, 3, 1, -11, 3, 0, -10, 3, 0, -9, 3, 1, -8, 3, 0, -7, 3, 1, -6, 3, 0, -5, 3, 1, -4, 3, 0, -3, 3, 1, -2, 3, 0, -1, 3, 1, -65536, 4, 1, -65535, 4, 0, -65534, 4, 1, -65533, 4, 0, -65532, 4, 1, -65531, 4, 0, -65530, 4, 1, -65529, 4, 0, -65528, 4, 1, -65527, 4, 0, -65526, 4, 0, -65525, 4, 1073741825, -65524, 4, 0, -65523, 4, 1, -65522, 4, 0, -15, 4, 1, -14, 4, 0, -13, 4, 1, -12, 4, 0, -11, 4, 536870913, -10, 4, 1, -9, 4, 0, -8, 4, 1, -7, 4, 0, -6, 4, 1, -5, 4, 0, -4, 4, 1, -3, 4, 0, -2, 4, 536870913, -1, 4, 1073741824, -65536, 5, 0, -65535, 5, 1, -65534, 5, 0, -65533, 5, 1, -65532, 5, 0, -65531, 5, 1, -65530, 5, 0, -65529, 5, 1, -65528, 5, 0, -65527, 5, 1, -65526, 5, 1, -65525, 5, 0, -65524, 5, 1, -65523, 5, 0, -65522, 5, 1, -15, 5, 0, -14, 5, 1, -13, 5, 0, -12, 5, 1, -11, 5, 0, -10, 5, 0, -9, 5, 1, -8, 5, 0, -7, 5, 1, -6, 5, 0, -5, 5, 536870913, -4, 5, 0, -3, 5, 1, -2, 5, 0, -1, 5, 1, -65536, 6, 1, -65535, 6, 0, -65534, 6, 1, -65533, 6, 0, -65532, 6, 1, -65531, 6, 0, -65530, 6, 1, -65529, 6, 0, -65528, 6, 1, -65527, 6, 0, -65526, 6, 0, -65525, 6, 1, -65524, 6, 0, -65523, 6, 1, -65522, 6, 1073741824, -15, 6, 1, -14, 6, 0, -13, 6, 1, -12, 6, 0, -11, 6, 1, -10, 6, 1, -9, 6, 0, -8, 6, 1, -7, 6, 0, -6, 6, 1, -5, 6, 0, -4, 6, 1, -3, 6, 0, -2, 6, 1, -1, 6, 0, -65536, 7, 0, -65535, 7, 1, -65534, 7, 0, -65533, 7, 1, -65532, 7, 0, -65531, 7, 1, -65530, 7, 0, -65529, 7, 1, -65528, 7, 0, -65527, 7, 1, -65526, 7, 1, -65525, 7, 0, -65524, 7, 1, -65523, 7, 0, -65522, 7, 1, -15, 7, 0, -14, 7, 1, -13, 7, 0, -12, 7, 1, -11, 7, 0, -10, 7, 0, -9, 7, 1, -8, 7, 0, -7, 7, 1, -6, 7, 0, -5, 7, 1, -4, 7, 0, -3, 7, 1, -2, 7, 0, -1, 7, 1, -65536, 8, 1, -65535, 8, 0, -65534, 8, 1, -65533, 8, 0, -65532, 8, 1, -65531, 8, 0, -65530, 8, 1, -65529, 8, 0, -65528, 8, 1, -65527, 8, 0, -65526, 8, 0, -65525, 8, 1, -65524, 8, 0, -65523, 8, 1, -65522, 8, 0, -15, 8, 1, -14, 8, 0, -13, 8, 1, -12, 8, 0, -11, 8, 1, -10, 8, 1, -9, 8, 0, -8, 8, 1, -7, 8, 1073741824, -6, 8, 1073741825, -5, 8, 0, -4, 8, 1, -3, 8, 1073741824, -2, 8, 1, -1, 8, 536870912, -65536, 9, 0, -65535, 9, 1, -65534, 9, 0, -65533, 9, 1, -65532, 9, 0, -65531, 9, 1, -65530, 9, 0, -65529, 9, 1, -65528, 9, 0, -65527, 9, 0, -65526, 9, 1, -65525, 9, 0, -65524, 9, 1, -65523, 9, 0, -65522, 9, 1, -15, 9, 0, -14, 9, 1, -13, 9, 0, -12, 9, 1, -11, 9, 0, -10, 9, 1, -9, 9, 1, -8, 9, 0, -7, 9, 1, -6, 9, 0, -5, 9, 1, -4, 9, 0, -3, 9, 1, -2, 9, 0, -1, 9, 1, -65536, 10, 0, -65535, 10, 1, -65534, 10, 0, -65533, 10, 1, -65532, 10, 0, -65531, 10, 1, -65530, 10, 0, -65529, 10, 1, -65528, 10, 0, -65527, 10, 1, -65526, 10, 0, -65525, 10, 1, -65524, 10, 0, -65523, 10, 1, -65522, 10, 0, -15, 10, 1, -14, 10, 0, -13, 10, 1, -12, 10, 0, -11, 10, 1, -10, 10, 0, -9, 10, 536870913, -8, 10, 0, -7, 10, 1, -6, 10, 0, -5, 10, 1, -4, 10, 0, -3, 10, 1, -2, 10, 0, -1, 10, 1, -65536, 11, 1, -65535, 11, 0, -65534, 11, -2147483647, -65533, 11, 0, -65532, 11, 1, -65531, 11, 0, -65530, 11, 536870913, -65529, 11, 0, -65528, 11, 1, -65527, 11, 0, -65526, 11, 1, -65525, 11, 0, -65524, 11, 1, -65523, 11, 0, -65522, 11, 7, -15, 11, 1075183620, -14, 11, 1, -13, 11, 0, -12, 11, 1, -11, 11, 0, -10, 11, 1, -9, 11, 0, -8, 11, 1, -7, 11, 0, -6, 11, 1, -5, 11, 0, -4, 11, 1, -3, 11, 0, -2, 11, 1, -1, 11, 0, -65536, 12, 0, -65535, 12, 1, -65534, 12, 0, -65533, 12, 1, -65532, 12, 0, -65531, 12, 1, -65530, 12, 0, -65529, 12, 1, -65528, 12, 0, -65527, 12, 1, -65526, 12, 0, -65525, 12, 536870913, -65524, 12, 0, -65523, 12, 7, -14, 12, 1441796, -13, 12, 1, -12, 12, 0, -11, 12, 1, -10, 12, 536870912, -9, 12, 1, -8, 12, 0, -7, 12, 1, -6, 12, 0, -5, 12, 1, -4, 12, 0, -3, 12, 1, -2, 12, 536870912, -1, 12, 1, -65536, 13, 1, -65535, 13, 0, -65534, 13, 1, -65533, 13, 0, -65532, 13, 1, -65531, 13, 0, -65530, 13, 1, -65529, 13, 536870912, -65528, 13, 1, -65527, 13, 0, -65526, 13, 1, -65525, 13, 0, -65524, 13, 7, -13, 13, 1441796, -12, 13, 1, -11, 13, 0, -10, 13, 1, -9, 13, 0, -8, 13, 1, -7, 13, 1073741824, -6, 13, 1, -5, 13, 0, -4, 13, 1, -3, 13, 0, -2, 13, 1, -1, 13, 0, -65536, 14, 0, -65535, 14, 1, -65534, 14, 0, -65533, 14, 1, -65532, 14, 536870912, -65531, 14, 1, -65530, 14, 0, -65529, 14, 1, -65528, 14, 0, -65527, 14, 1, -65526, 14, 0, -65525, 14, 7, -12, 14, 1441796, -11, 14, 536870913, -10, 14, 0, -9, 14, 1, -8, 14, 0, -7, 14, 1, -6, 14, 0, -5, 14, 1, -4, 14, 0, -3, 14, 1, -2, 14, 0, -1, 14, 1, -65536, 65521, 1, -65535, 65521, 1048576, -65534, 65521, 1, -65533, 65521, 1048576, -65532, 65521, 1, -65531, 65521, 1048576, -65530, 65521, 1, -65529, 65521, 1048576, -65528, 65521, 1, -65527, 65521, 1048576, -65526, 65521, 1, -65525, 65521, 1048578, -12, 65521, 655366, -11, 65521, 1048576, -10, 65521, 1, -9, 65521, 1048576, -8, 65521, 536870913, -7, 65521, 1048576, -6, 65521, 1, -5, 65521, 1048576, -4, 65521, 1, -3, 65521, 1048576, -2, 65521, 1, -1, 65521, 1048576, -65536, 65522, 0, -65535, 65522, 1, -65534, 65522, 0, -65533, 65522, 1, -65532, 65522, 0, -65531, 65522, 1, -65530, 65522, 0, -65529, 65522, 1, -65528, 65522, 0, -65527, 65522, 1, -65526, 65522, 0, -65525, 65522, 1, -65524, 65522, 1048578, -13, 65522, 655366, -12, 65522, 1048576, -11, 65522, 1, -10, 65522, 0, -9, 65522, 1, -8, 65522, 0, -7, 65522, 1, -6, 65522, 0, -5, 65522, 1, -4, 65522, 0, -3, 65522, 1, -2, 65522, 0, -1, 65522, 1, -65536, 65523, 1, -65535, 65523, 0, -65534, 65523, 1, -65533, 65523, 0, -65532, 65523, 1, -65531, 65523, 0, -65530, 65523, 1, -65529, 65523, 0, -65528, 65523, 1, -65527, 65523, 0, -65526, 65523, 1, -65525, 65523, 0, -65524, 65523, 1, -65523, 65523, 1048578, -14, 65523, 655366, -13, 65523, 1048576, -12, 65523, 1, -11, 65523, 0, -10, 65523, 1, -9, 65523, 0, -8, 65523, 1, -7, 65523, 0, -6, 65523, 1, -5, 65523, 0, -4, 65523, 1, -3, 65523, 0, -2, 65523, 1, -1, 65523, 0, -65536, 65524, 0, -65535, 65524, 1, -65534, 65524, 0, -65533, 65524, 1, -65532, 65524, 0, -65531, 65524, 1, -65530, 65524, 0, -65529, 65524, 1, -65528, 65524, 0, -65527, 65524, 1, -65526, 65524, 0, -65525, 65524, 1, -65524, 65524, 0, -65523, 65524, 1, -65522, 65524, 1048578, -15, 65524, 655366, -14, 65524, 1048576, -13, 65524, 1, -12, 65524, 0, -11, 65524, 1, -10, 65524, 0, -9, 65524, 1, -8, 65524, 0, -7, 65524, 1, -6, 65524, 0, -5, 65524, 1, -4, 65524, 0, -3, 65524, 1, -2, 65524, 0, -1, 65524, 1, -65536, 65525, 1, -65535, 65525, 0, -65534, 65525, 1, -65533, 65525, 0, -65532, 65525, 1, -65531, 65525, 0, -65530, 65525, 1, -65529, 65525, 0, -65528, 65525, 1, -65527, 65525, 0, -65526, 65525, 1, -65525, 65525, 0, -65524, 65525, 1, -65523, 65525, 0, -65522, 65525, 1, -15, 65525, 1048576, -14, 65525, 1, -13, 65525, 0, -12, 65525, 1, -11, 65525, 0, -10, 65525, 1, -9, 65525, 0, -8, 65525, 1, -7, 65525, 0, -6, 65525, 1, -5, 65525, 0, -4, 65525, 1, -3, 65525, 0, -2, 65525, 1, -1, 65525, 0, -65536, 65526, 1, -65535, 65526, 0, -65534, 65526, 1, -65533, 65526, 0, -65532, 65526, 1, -65531, 65526, 0, -65530, 65526, 1, -65529, 65526, 0, -65528, 65526, 1, -65527, 65526, 1, -65526, 65526, 0, -65525, 65526, 1, -65524, 65526, 0, -65523, 65526, 1, -65522, 65526, 0, -15, 65526, 1, -14, 65526, 0, -13, 65526, 1, -12, 65526, 0, -11, 65526, 1, -10, 65526, 0, -9, 65526, 0, -8, 65526, 536870913, -7, 65526, 0, -6, 65526, 1, -5, 65526, 0, -4, 65526, 1, -3, 65526, 0, -2, 65526, 1, -1, 65526, 0, -65536, 65527, 0, -65535, 65527, 1, -65534, 65527, 0, -65533, 65527, 1, -65532, 65527, 0, -65531, 65527, 1, -65530, 65527, 0, -65529, 65527, 1, -65528, 65527, 0, -65527, 65527, 1, -65526, 65527, 1, -65525, 65527, 0, -65524, 65527, 1, -65523, 65527, 0, -65522, 65527, 1, -15, 65527, 0, -14, 65527, 1, -13, 65527, 0, -12, 65527, 1, -11, 65527, 0, -10, 65527, 0, -9, 65527, 1, -8, 65527, 0, -7, 65527, 1, -6, 65527, 0, -5, 65527, 1, -4, 65527, 0, -3, 65527, 1, -2, 65527, 0, -1, 65527, 1, -65536, 65528, 1, -65535, 65528, 0, -65534, 65528, 1, -65533, 65528, 0, -65532, 65528, 1, -65531, 65528, 0, -65530, 65528, 1, -65529, 65528, 0, -65528, 65528, 1, -65527, 65528, 0, -65526, 65528, 0, -65525, 65528, 1, -65524, 65528, 1073741824, -65523, 65528, 1, -65522, 65528, 0, -15, 65528, 1, -14, 65528, 0, -13, 65528, 1, -12, 65528, 0, -11, 65528, 1, -10, 65528, 1, -9, 65528, 0, -8, 65528, 1, -7, 65528, 0, -6, 65528, 1, -5, 65528, 0, -4, 65528, 1, -3, 65528, 0, -2, 65528, 536870913, -1, 65528, 0, -65536, 65529, 0, -65535, 65529, 1, -65534, 65529, 0, -65533, 65529, 1, -65532, 65529, 0, -65531, 65529, 1, -65530, 65529, 0, -65529, 65529, 1, -65528, 65529, 0, -65527, 65529, 1, -65526, 65529, 1, -65525, 65529, 0, -65524, 65529, 1, -65523, 65529, 0, -65522, 65529, 1, -15, 65529, 0, -14, 65529, 1, -13, 65529, 0, -12, 65529, 1, -11, 65529, 0, -10, 65529, 0, -9, 65529, 1, -8, 65529, 0, -7, 65529, 1, -6, 65529, 0, -5, 65529, 1, -4, 65529, 0, -3, 65529, 1, -2, 65529, 0, -1, 65529, 1073741825, -65536, 65530, 1, -65535, 65530, 0, -65534, 65530, 1, -65533, 65530, 0, -65532, 65530, 1, -65531, 65530, 0, -65530, 65530, 1, -65529, 65530, 0, -65528, 65530, 1, -65527, 65530, 536870912, -65526, 65530, 0, -65525, 65530, 1, -65524, 65530, 0, -65523, 65530, 1, -65522, 65530, 536870912, -15, 65530, 1, -14, 65530, 0, -13, 65530, 1, -12, 65530, 0, -11, 65530, 1, -10, 65530, 1, -9, 65530, 0, -8, 65530, 1, -7, 65530, 0, -6, 65530, 1, -5, 65530, 0, -4, 65530, 1, -3, 65530, 1073741824, -2, 65530, 1, -1, 65530, 0, -65536, 65531, 536870912, -65535, 65531, 1, -65534, 65531, 0, -65533, 65531, 1, -65532, 65531, 0, -65531, 65531, 1, -65530, 65531, 0, -65529, 65531, 1, -65528, 65531, 0, -65527, 65531, 1, -65526, 65531, 1, -65525, 65531, 0, -65524, 65531, 1, -65523, 65531, 0, -65522, 65531, 1, -15, 65531, 1073741824, -14, 65531, 1, -13, 65531, 0, -12, 65531, 1, -11, 65531, 0, -10, 65531, 0, -9, 65531, 1, -8, 65531, 0, -7, 65531, 1, -6, 65531, 0, -5, 65531, 1, -4, 65531, 0, -3, 65531, 1, -2, 65531, 0, -1, 65531, 1, -65536, 65532, 1, -65535, 65532, 0, -65534, 65532, 1, -65533, 65532, 0, -65532, 65532, 1, -65531, 65532, 0, -65530, 65532, 1, -65529, 65532, 0, -65528, 65532, 1, -65527, 65532, 0, -65526, 65532, 0, -65525, 65532, 1, -65524, 65532, 0, -65523, 65532, 1, -65522, 65532, 0, -15, 65532, 1, -14, 65532, 0, -13, 65532, 1, -12, 65532, 0, -11, 65532, 1, -10, 65532, 1, -9, 65532, 0, -8, 65532, 1, -7, 65532, 0, -6, 65532, 1, -5, 65532, 0, -4, 65532, 1, -3, 65532, 0, -2, 65532, 1, -1, 65532, 0, -65536, 65533, 0, -65535, 65533, 1, -65534, 65533, 0, -65533, 65533, 1, -65532, 65533, 0, -65531, 65533, 1, -65530, 65533, 0, -65529, 65533, 1, -65528, 65533, 0, -65527, 65533, 1, -65526, 65533, 1, -65525, 65533, 0, -65524, 65533, 1, -65523, 65533, 0, -65522, 65533, 1, -15, 65533, 0, -14, 65533, 1, -13, 65533, 0, -12, 65533, 1, -11, 65533, 0, -10, 65533, 0, -9, 65533, 1, -8, 65533, 0, -7, 65533, 1, -6, 65533, 0, -5, 65533, 1, -4, 65533, 0, -3, 65533, 1, -2, 65533, 0, -1, 65533, 1, -65536, 65534, 1, -65535, 65534, 536870912, -65534, 65534, 1, -65533, 65534, 0, -65532, 65534, 1, -65531, 65534, 0, -65530, 65534, 1, -65529, 65534, 0, -65528, 65534, 1, -65527, 65534, 0, -65526, 65534, 0, -65525, 65534, 1, -65524, 65534, 0, -65523, 65534, 1, -65522, 65534, 0, -15, 65534, 1, -14, 65534, 0, -13, 65534, 1, -12, 65534, 0, -11, 65534, 1, -10, 65534, 1, -9, 65534, 0, -8, 65534, 1, -7, 65534, 0, -6, 65534, 1, -5, 65534, 536870912, -4, 65534, 1, -3, 65534, 0, -2, 65534, 1, -1, 65534, 0, -65536, 65535, 0, -65535, 65535, 1, -65534, 65535, 0, -65533, 65535, 1, -65532, 65535, 0, -65531, 65535, 1, -65530, 65535, 0, -65529, 65535, 1, -65528, 65535, 536870912, -65527, 65535, 1, -65526, 65535, -1073741823, -65525, 65535, 0, -65524, 65535, 1, -65523, 65535, 0, -65522, 65535, 1, -15, 65535, 0, -14, 65535, 1, -13, 65535, 0, -12, 65535, 1, -11, 65535, 0, -10, 65535, 0, -9, 65535, 1, -8, 65535, 0, -7, 65535, 1, -6, 65535, 0, -5, 65535, 1, -4, 65535, 0, -3, 65535, 1, -2, 65535, 0, -1, 65535, 1 )
}

[node name="Area" type="Area" parent="Navigation/Map"]
gravity_vec = Vector3( 0, 0, 0 )
collision_mask = 2147483649
script = ExtResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="Navigation/Map/Area"]
transform = Transform( 25, 0, 0, 0, 1, 0, 0, 0, 25, 0, -1, 0 )
shape = SubResource( 1 )

[node name="NavigationMeshInstance" type="NavigationMeshInstance" parent="Navigation"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0 )
navmesh = SubResource( 2 )

[node name="EnemySpawner" type="Node" parent="Navigation"]
script = ExtResource( 11 )

[node name="Timer" type="Timer" parent="Navigation/EnemySpawner"]

[node name="Waves" type="Node" parent="Navigation/EnemySpawner"]

[node name="Wave" type="Node" parent="Navigation/EnemySpawner/Waves"]
script = ExtResource( 12 )
enemy_quant = 4

[node name="Wave2" type="Node" parent="Navigation/EnemySpawner/Waves"]
script = ExtResource( 12 )

[node name="Random_wave" type="Node" parent="Navigation/EnemySpawner/Waves"]
script = ExtResource( 13 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.596953, 0.802276, 0, -0.802276, 0.596953, 0.0107276, 23.7453, 0.0206528 )
shadow_color = Color( 0.0745098, 0.0313726, 0.2, 1 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.596953, 0.802276, 0, -0.802276, 0.596953, 0.0107276, 13.3941, 0.0206528 )
visible = false
light_color = Color( 0.905882, 0.878431, 0.780392, 1 )
light_energy = 2.21
light_indirect_energy = 0.9
light_cull_mask = 2147483647
omni_range = 74.4698
omni_attenuation = 1.51571

[node name="CameraUI" type="Spatial" parent="."]
script = ExtResource( 19 )

[node name="CameraUI2" type="Spatial" parent="CameraUI"]
script = ExtResource( 21 )

[node name="Camera" type="Camera" parent="CameraUI/CameraUI2"]
transform = Transform( 0.720404, -0.549114, 0.423665, -0.00134093, 0.609756, 0.792588, -0.693554, -0.571551, 0.438534, 34.621, 44.012, 33.982 )
fov = 54.3
script = ExtResource( 3 )

[node name="Selection_UI" type="Spatial" parent="."]

[node name="ArtilhariaShoot" parent="Selection_UI" instance=ExtResource( 4 )]
visible = false

[node name="MeshInstance" parent="Selection_UI" instance=ExtResource( 9 )]
visible = false

[node name="RayCast" type="RayCast" parent="Selection_UI"]

[node name="Interface" type="Node2D" parent="."]

[node name="Container" type="Spatial" parent="."]

[node name="Artilharia" parent="Container" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 14.2138, 0, 9.26224 )

[node name="Botoes" type="Node2D" parent="."]

[node name="Build_mode_button" type="CheckButton" parent="Botoes"]
visible = false
anchor_right = 1.0
margin_right = 76.0
margin_bottom = 40.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Artilharia" type="CheckButton" parent="Botoes"]
visible = false
margin_left = -0.0661621
margin_top = 39.5538
margin_right = 75.9338
margin_bottom = 79.5538
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonWave" type="TextureButton" parent="Botoes"]
margin_right = 120.0
margin_bottom = 48.0
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 16 )
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Botoes/ButtonWave"]
margin_left = 8.0
margin_top = 5.0
margin_right = 113.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.705882, 0.266667, 0.407843, 1 )
text = "Next Wave"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Money_text" type="Label" parent="Botoes"]
margin_left = 964.02
margin_top = 4.24139
margin_right = 1015.02
margin_bottom = 55.2414
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "100"
align = 3
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Botoes/Money_text"]
position = Vector2( -23.8311, 24.4382 )
scale = Vector2( 2, 2 )
texture = ExtResource( 18 )
[connection signal="mouse_entered" from="Navigation/Map/Area" to="." method="_on_mouse_enter"]
[connection signal="mouse_exited" from="Navigation/Map/Area" to="." method="_on_area_exited"]
[connection signal="timeout" from="Navigation/EnemySpawner/Timer" to="Navigation/EnemySpawner" method="_on_Timer_timeout"]
[connection signal="pressed" from="Botoes/Build_mode_button" to="Botoes/Build_mode_button" method="_on_Build_mode_button_pressed"]
[connection signal="pressed" from="Botoes/Artilharia" to="Botoes/Artilharia" method="_on_Artilharia_pressed"]
[connection signal="pressed" from="Botoes/ButtonWave" to="." method="_on_ButtonWave_pressed"]
